--- a/marketplace/item/templates/item/details.html
+++ b/marketplace/item/templates/item/details.html
@@ -22,7 +22,13 @@
                 {{item.description}}
             </p>
         {% endif %}
-        <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold  bg-teal-500 text-white hover:bg:teal-700">Contact Seller</a>
+
+        {% if request.user == item.created_by %}
+            <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold  bg-blue-500 text-white hover:bg:teal-700">Edit</a>
+            <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold  bg-red-500 text-white hover:bg:teal-700">Delete</a>
+        {% else %}
+            <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold  bg-teal-500 text-white hover:bg:teal-700">Contact Seller</a>
+        {% endif %}
     </div>
 
 </div>
