--- a/marketplace/item/templates/item/details.html
+++ b/marketplace/item/templates/item/details.html
@@ -24,10 +24,16 @@
         {% endif %}
 
         {% if request.user == item.created_by %}
-            <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold  bg-blue-500 text-white hover:bg:teal-700">Edit</a>
-            <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold  bg-red-500 text-white hover:bg:teal-700">Delete</a>
+        <form action="{% url 'item:edit' item.id %}" method="POST" class="inline-block">
+            {% csrf_token %}
+                <button type="submit" class="mt-6 px-6 py-3 text-lg font-semibold bg-blue-500 text-white hover:bg:teal-700">Edit</button>
+        </form>
+        <form action="{% url 'item:delete' item.id %}" method="POST" class="inline-block">
+            {% csrf_token %}
+                <button type="submit" class="mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white hover:bg:teal-700">Delete</button>
+         </form>
         {% else %}
-            <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold  bg-teal-500 text-white hover:bg:teal-700">Contact Seller</a>
+             <a href="#" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white hover:bg:teal-700">Contact Seller</a>
         {% endif %}
     </div>
 
