--- a/marketplace/core/templates/core/signup.html
+++ b/marketplace/core/templates/core/signup.html
@@ -18,6 +18,10 @@
             <label class="inline-block mb-2">Email</label><br>
             {{ form.email }}
         </div>
+        <div class="mb-3">
+            <label class="inline-block mb-2">Gender</label><br>
+            {{ form.gender }}
+        </div>
 
         <div class="mb-3">
             <label class="inline-block mb-2">Password</label><br>
